# GOM

./: .markdownlint.json  COMPARISON.md  Cargo.toml  DREAMBERD_IDE_README.md  FEATURE_INTEGRATION_STATUS.md  IMPLEMENTATION_PROGRESS_REPORT.md  INTEGRATION_COMPLETE.md  KEYWORD_ALIASING_DESIGN.md  MISSING_FEATURES.md  README-RUST.md  README.md  RUST_REFACTORING.md  RUST_SPEC_COMPLIANCE_ANALYSIS.md  WEB_IDE_GUIDE.md  comprehensive_test.gom  constructor_test.gom  debug_if_complete.gom  distribute_ide.sh  dreamberd_ide.py  final_compliance_demo.gom  if_statement_comprehensive_test.gom  pyproject.toml  run_gom.py  run_web_ide.sh  spec_test_adapted.gom  specification_compliance_test.gom  terminal_ide.py  test.db  test_all_working.gom  test_assign.gom  test_async.gom  test_class.gom  test_classes.gom  test_confirmed_features.gom  test_features.gom  test_first2.gom  test_function_def.gom  test_functions_only.gom  test_history_tracking.gom  test_hoist.db  (+36 more)
dreamberd/: __init__.py  builtin.py  interpreter.py
dreamberd-ide-aarch64/: README.txt  run_ide.sh
dreamberd-ide-aarch64/examples/: hello.db  ide_demo.db
dreamberd/processor/: expression_tree.py
examples/: calculator.db  calculator.gom  hello.db  ide_demo.gom
gulfofmexico/: __init__.py  __main__.py  builtin.py  interpreter.py  repl.py  serialize.py
gulfofmexico/ide/: __main__.py  app.py  editor.py  highlighter.py  qt_compat.py  web_ide.py
gulfofmexico/processor/: expression_tree.py  lexer.py  syntax_tree.py
src/: base.rs  builtin.rs  ide.rs  interpreter.rs  serialize.rs
src/processor/: expression_tree.rs  (+1 more)
