[tool.poetry]
name = "gulfofmexico"
version = "0.1.1"
description = "An interpreter for the perfect programming language, GulfOfMexico."
readme = "README.md"
authors = ["James HoneyBadger <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "1.7.6"
pygithub = "2.2.0"
requests = "2.31.0"

[tool.poetry.scripts]
gom-ide = "gulfofmexico.ide.app:run"

[tool.poetry.extras]
input = ["pynput"]
globals = ["pygithub"]
ide = ["PySide6>=6.6"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
